[project]
name = "pythoncodehub"
version = "0.1.0"
description = "用于记录日常开发中遇到的可以复用的代码"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "celery==5",
  "inflection>=0.5.1",
  "pandas>=2.3.1",
  "pytest>=8.4.1",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2",
  "ruff>=0.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  ".git",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "node_modules",
  "scripts",
  "venv",
]

output-format = "full"
format.docstring-code-format = true
lint.select = [ "E4", "E7", "E9", "F", "UP" ]
lint.ignore = [
  # `ruff rule S101` for a description of that rule
  "B904",    # Within an `except` clause, raise exceptions with `raise ... from err` -- FIX ME
  "B905",    # `zip()` without an explicit `strict=` parameter -- FIX ME
  "EM101",   # Exception must not use a string literal, assign to variable first
  "EXE001",  # Shebang is present but file is not executable -- DO NOT FIX
  "G004",    # Logging statement uses f-string
  "ISC001",  # Conflicts with ruff format -- DO NOT FIX
  "PLC1901", # `{}` can be simplified to `{}` as an empty string is falsey
  "PLW060",  # Using global for `{name}` but no assignment is done -- DO NOT FIX
  "PLW2901", # PLW2901: Redefined loop variable -- FIX ME
  "PT011",   # `pytest.raises(Exception)` is too broad, set the `match` parameter or use a more specific exception
  "PT018",   # Assertion should be broken down into multiple parts
  "RUF002",  # Docstring contains ambiguous unicode characters (中文标点) -- DO NOT FIX
  "RUF003",  # Comment contains ambiguous unicode characters (中文标点) -- DO NOT FIX
  "RUF013",  # PEP 484 prohibits implicit `Optional` (过于严格) -- DO NOT FIX
  "S101",    # Use of `assert` detected -- DO NOT FIX
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes -- FIX ME
  "SIM905",  # Consider using a list literal instead of `str.split` -- DO NOT FIX
  "SLF001",  # Private member accessed: `_Iterator` -- FIX ME
  "UP038",   # Use `X | Y` in `{}` call instead of `(X, Y)` -- DO NOT FIX
]

lint.extend-ignore = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.extend-safe-fixes = [ "UP" ]

lint.mccabe.max-complexity = 17 # default: 10
lint.pylint.allow-magic-value-types = [
  "float",
  "int",
  "str",
]
lint.pylint.max-args = 10 # default: 5
lint.pylint.max-branches = 20 # default: 12
lint.pylint.max-returns = 8 # default: 6
lint.pylint.max-statements = 88 # default: 50

[tool.codespell]
ignore-words-list = "3rt,abd,aer,ans,bitap,crate,damon,fo,followings,hist,iff,kwanza,manuel,mater,secant,som,sur,tim,toi,zar"
skip = "./.*,*.json,*.lock,ciphers/prehistoric_men.txt,project_euler/problem_022/p022_names.txt,pyproject.toml,strings/dictionary.txt,strings/words.txt"

# pytest

[tool.pytest.ini_options]
testpaths = [ "tests/" ]
python_files = [ "test_*.py", "tests.py" ]

[[tool.uv.index]]
# 配置清华源
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
