[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "tsdetect"
version = "0.1.0"
description = "A general-purpose time series anomaly detection library"
readme = "README.md"
keywords = [
  "alerting",
  "anomaly-detection",
  "monitoring",
  "ring-ratio",
  "threshold",
  "time-series",
  "year-round",
]
license = { text = "MIT" }
authors = [
  { name = "BlueKing", email = "contactus@blueking.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]

# 核心依赖（最小化）
dependencies = [  ]

# 开发依赖
optional-dependencies.dev = [
  "black>=23",
  "isort>=5",
  "mypy>=1",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.1",
]
# 完整功能（包含可选依赖）
optional-dependencies.full = [
  "numpy>=1.24",
  "pandas>=2",
]
urls.Documentation = "https://bk.tencent.com/docs/document/7.0/248/40108"
urls.Homepage = "https://github.com/TencentBlueKing/bk-monitor"
urls.Repository = "https://github.com/TencentBlueKing/bk-monitor"

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "tsdetect*" ]

[tool.setuptools.package-data]
tsdetect = [ "py.typed" ]

[tool.black]
line-length = 120
target-version = [ "py310", "py311", "py312" ]

[tool.ruff]
target-version = "py310"

line-length = 120
lint.select = [ "B", "E", "F", "I", "N", "UP", "W" ]
lint.ignore = [ "E501" ]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_functions = [ "test_*" ]
addopts = "-v --tb=short"

[tool.coverage.run]
source = [ "tsdetect" ]
omit = [ "*/tests/*" ]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tsdetect.*"
disallow_untyped_defs = false
